# Yinshi

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
codex-feishu-bridge/: .gitignore  README.md  config.example.toml  pyproject.toml
codex-feishu-bridge/scripts/: deferred-single-app-cutover.py  install-user-service.sh  restart-after-stale-heavy-turns.py  restart-after-terminal-stale-turn.py  restart-bridge-when-idle.py
codex-feishu-bridge/src/codex_feishu_bridge/: __init__.py  artifacts.py  cli.py  codex_client.py  config.py  daily_stats.py  db.py  feishu.py  models.py  service.py  visual_proxy.py
codex-feishu-bridge/systemd/: codex-feishu-bridge.service
codex-feishu-bridge/tests/: test_codex_client.py  test_daily_stats.py  test_db.py  test_feishu.py  test_service.py  test_stale_cutover.py  test_visual_proxy.py
docs/: 01-project-overview.md  02-architecture.md  03-feishu-app-setup.md  04-ubuntu-setup.md  05-windows-and-server.md  06-operations.md  07-security-and-data.md  08-development-and-open-source.md  09-troubleshooting.md  10-image-performance.md  README.md  SETUP_CHECKLIST.md
