[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-feishu-bridge"
version = "0.2.0"
description = "A local Feishu control plane for persistent Codex conversations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.24,<1",
  "lark-oapi==1.7.1",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
]

[project.scripts]
codex-feishu-bridge = "codex_feishu_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
